[package]
name = "notifico-smtp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
serde_json = "1.0.139"
tracing = "0.1.41"
lettre = { version = "0.11.14", default-features = false, features = [
    "smtp-transport", "pool", "hostname", "builder",
    "serde", "tokio1-native-tls", "tracing"
] }
serde = { version = "1.0.218", features = ["derive"] }
uuid = { workspace = true }
url = "2.5.4"
moka = { version = "0.12.10", features = ["future"] }
mime = "0.3.17"

notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }
