[package]
name = "notifico-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
reqwest = { workspace = true }

notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }
