[package]
name = "notifico-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
reqwest = { workspace = true }

notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }
