[package]
name = "notifico-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { workspace = true }

notifico-core = { path = "../../notifico-core" }
notifico-attachment = { path = "../../notifico-attachment" }
