[package]
name = "notifico-whatsapp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
uuid = { workspace = true }
serde_json = "1.0.138"
async-trait = "0.1.84"
reqwest = { workspace = true }
tracing = "0.1.41"
regex = "1.11.1"

notifico-core = { path = "../../notifico-core" }
