[package]
name = "notifico-whatsapp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
uuid = { workspace = true }
serde_json = "1.0.139"
async-trait = "0.1.86"
reqwest = { workspace = true }
tracing = "0.1.41"
regex = "1.11.1"

notifico-core = { path = "../../notifico-core" }
